--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,16 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is Django project</title>
-    <linkrel="stylesheet" href="{% static '../static/css/style.css' %}">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-    <h1>This is Django project try</h1>
+    <h1> This is Django project </h1>
 </body>
 </html>
