--- a/book/templates/book/book_list.html
+++ b/book/templates/book/book_list.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Books list</h1>
-    {% for book in object_list %}
+    {% for book in book_list %}
     <h2>{{book.title}}: author_{{book.author}}. </h2>
     <p>Category is {{book.category}}</p>
     <p>{{book.description}}</p>
