--- a/book/templates/book/index.html
+++ b/book/templates/book/index.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>book_list</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+<!-- index.html content starts here -->
+{% block content %}
+
     <h1>Books list</h1>
     {% for book in book_list %}
     <h2>{{book.title}}: author_{{book.author}}. </h2>
@@ -14,5 +10,6 @@
     <p>{{book.description}}</p>
 
     {% endfor %}
-</body>
-</html>
+
+<!-- index.html content ends here -->
+{% endblock %}
