--- a/book/templates/book/index.html
+++ b/book/templates/book/index.html
@@ -3,13 +3,59 @@
 <!-- index.html content starts here -->
 {% block content %}
 
-    <h1>Books list</h1>
-    {% for book in book_list %}
-    <h2>{{book.title}}: author_{{book.author}}. </h2>
-    <p>Category is {{book.category}}</p>
-    <p>{{book.description}}</p>
+<!-- index.html content starts here -->
+<div class="container-fluid content">
+    <div class="row">
+        <!-- Book Entries Column -->
+        <div class="col-12 mt-3 left">
+            <div class="row">
+                {% for book in book_list %}
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <div class="image-container">
+                                <div class="">
+                                    <p class="author">Author: {{ book.author }}</p>
+                                </div>
+                            </div>
+                            <a href="#" class="book-link">
+                                <h2 class="card-title">{{ book.title }}</h2>
+                            </a>
+                            <hr />
+                            <p class="card-text text-muted h6">{{ book.category}}
+                                <hr />
+                                <p class="card-text text-muted h6">{{ book.created_on}}
+                                </p>
+                        </div>
+                    </div>
+                </div>
+                {% if forloop.counter|divisibleby:3 %}
+            </div>
+            <div class="row">
+                {% endif %}
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+    {% if is_paginated %}
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+            <li><a href="?page={{ page_obj.previous_page_number }}" class="book-link"> &laquo PREV </a></li>
+            <span>......</span>
+            {% else %}
+            <p>You're at the home page!</p>
+            {% endif %}
+            {% if page_obj.has_next %}
+            <li><a href="?page={{ page_obj.next_page_number }}" class="book-link"> NEXT &raquo; </a></li>
+            {% else %}
+            <p>You're at the last page!</p>
+            {% endif %}
 
-    {% endfor %}
+        </ul>
+    </nav>
+    {% endif %}
+</div>
 
 <!-- index.html content ends here -->
 {% endblock %}
