--- a/book/templates/book/index.html
+++ b/book/templates/book/index.html
@@ -18,7 +18,7 @@
                                     <p class="author">Author: {{ book.author }}</p>
                                 </div>
                             </div>
-                            <a href="#" class="book-link">
+                            <a href="{% url 'book_detail' book.id %}" class="book-link">
                                 <h2 class="card-title">{{ book.title }}</h2>
                             </a>
                             <hr />
