--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'book' %}"><span class="p2" style="color:#7EBCE6">Book</span><span style="color:#21897E">_shelf</span></a>
+            <a class="navbar-brand" href="{% url 'home' %}"><span class="p2" style="color:#7EBCE6">Book</span><span style="color:#21897E">_shelf</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
