--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,15 @@
 .book-link{
     font-weight: 700;
     text-decoration: none;
-    color: #21897E;
+    color: #21897e;
 }
 
 h1{
     color:red;
+}
+
+.bookForm{
+    text-align: center;
+    color:#21897e;
+    border: 1px black solid; 
 }
