--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,10 +1,19 @@
-
 .book-link{
     font-weight: 700;
     text-decoration: none;
-    color: #21897E;
+    color: #21897e;
 }
 
 h1{
     color:red;
+}
+
+#bookForm{
+    text-align: center;
+    color:#21897e
+    
+}
+
+#heroimage{
+    max-height: 20vh;
 }
