--- a/templates/base.html
+++ b/templates/base.html
@@ -101,6 +101,11 @@
     </div>
 
     <main class="">
+        {% if user.is_authenticated %}
+        <p class="text-end m-3">You are logged in as {{user}}</p>
+        {% else %}
+        <p class="text-end m-3">You are not logged in</p>
+        {% endif %}
 
         {% block content %}
         <!-- Content Goes here -->
