--- a/book/templates/book/index.html
+++ b/book/templates/book/index.html
@@ -22,10 +22,13 @@
                                 <h2 class="card-title">{{ book.title }}</h2>
                             </a>
                             <hr />
-                            <p class="card-text text-muted h6">{{ book.category}}
+                            <p class="card-text text-muted h6">{{ book.category}}</p>
                                 <hr />
-                                <p class="card-text text-muted h6">{{ book.created_on}}
-                                </p>
+                            <p class="card-text text-muted h6">{{ book.created_on}}</p>
+                            {% if user.is_authenticated and book.user == user%}
+                            <a href="{% url 'edit_book' book.id %}" class="btn btn-dark">Update book</a>
+                            <a href="{% url 'delete_book' book.id %}" class="btn btn-danger">Delete book</a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
