--- a/book/templates/book/create_book.html
+++ b/book/templates/book/create_book.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
 <!-- book_detail.html content starts here -->
 {% block content %}
 
   <form id="bookForm" method="POST">
-    {{ form.as_p }}
+    {{ form |crispy}}
     {% csrf_token %}
     <button id="postbutton" type="submit">Create</button>
   </form>
