Update staticfiles and create_book.html

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -9,8 +9,7 @@ h1{
 }
 
 #bookForm{
-    width:50%;
-    text-align: center;
+    width:75%;
     color:#21897e;
-    border: 1px black solid; 
+    border: 3px #21897e solid; 
 }
