--- a/book/templates/book/create_book.html
+++ b/book/templates/book/create_book.html
@@ -4,12 +4,17 @@
 <!-- book_detail.html content starts here -->
 {% block content %}
 
-  <form id="bookForm" method="POST">
-    {{ form |crispy}}
-    {% csrf_token %}
-    <button id="postbutton" type="submit">Create</button>
-  </form>
-
+<div class="container">
+  <div class="row">
+    <div class="col md-8">
+      <form id="bookForm" method="POST">
+        {{ form |crispy}}
+        {% csrf_token %}
+        <button id="postbutton" type="submit">Create</button>
+      </form>
+    </div>
+  </div>
+</div>
 
 
 <!-- book_detail.html content ends here -->
