Delete specific comment relating to specific book

--- a/book/templates/book/book_detail.html
+++ b/book/templates/book/book_detail.html
@@ -59,7 +59,7 @@
                     {% endif %}
                     {% if user.is_authenticated and review.user == user %}
                     <button class="btn btn-dark btn-edit" review_id="{{ review.id }}" review_rating_id ="{{ review.rating}}">Edit</button>
-                    <button class="btn btn-danger" review_id="{{ review.id }}">Delete</button>
+                    <button class="btn btn-danger btn-delete" review_id="{{ review.id }}">Delete</button>
                     {% endif %}
                 </div>
                 <!-- Our for loop ends here -->
@@ -81,6 +81,25 @@
 </div>
 
 {% endif %}
+
+<!-- Delete confirmation modal -->
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteModalLabel">Delete comment?</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete your comment? This action cannot be undone.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <a id="deleteConfirm" href="#" class="btn btn-danger">Delete</a>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- book_detail.html content ends here -->
 {% endblock content%}
