--- a/book/templates/book/index.html
+++ b/book/templates/book/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 <!-- index.html content starts here -->
 {% block content %}
@@ -14,6 +15,12 @@
                     <div class="card mb-4">
                         <div class="card-body">
                             <div class="image-container">
+                                {% if "imageplaceholder" in book.image.url %}
+                                <img class="card-img-top" src="{% static 'images/heroimage.jpg' %}"
+                                    alt="placeholder image">
+                                {% else %}
+                                <img class="card-img-top" src=" {{ book.image.url }}" alt="{{ book.title }}">
+                                {% endif %}
                                 <div class="">
                                     <p class="author">Author: {{ book.author }}</p>
                                 </div>
@@ -23,7 +30,7 @@
                             </a>
                             <hr />
                             <p class="card-text text-muted h6">{{ book.category}}</p>
-                                <hr />
+                            <hr />
                             <p class="card-text text-muted h6">{{ book.created_on}}</p>
                             {% if user.is_authenticated and book.user == user%}
                             <a href="{% url 'edit_book' book.id %}" class="btn btn-dark">Update book</a>
