Add author as searching creteria

--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
 
                 </ul>
                 <form method="get" action="{% url 'search' %}">
-                    <input type="text" name="query" placeholder="Enter book title" value="{{ query }}">
+                    <input type="text" name="query" placeholder="Enter book title or author" value="{{ query }}">
                     <button type="submit">Search</button>
                 </form>
             </div>
