--- a/templates/base.html
+++ b/templates/base.html
@@ -33,14 +33,16 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
+            <!-- Logo -->
             <a class="navbar-brand" href="{% url 'home' %}"><span class="p2" style="color:#7EBCE6">Book</span><span
                     style="color:#21897E">_shelf</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <!-- Navigation items -->
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-1 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
@@ -68,9 +70,10 @@
                     {% endif %}
 
                 </ul>
+                <!-- Form for search bar -->
                 <form method="get" action="{% url 'search' %}">
-                    <input type="text" name="query" placeholder="Enter book title or author" value="{{ query }}">
-                    <button type="submit">Search</button>
+                    <input type="text" name="query" placeholder="Title or author or category" value="{{ query }}" width="600px">
+                    <button type="submit" class="btn btn-outline-primary">Search</button>
                 </form>
             </div>
         </div>
