--- a/book/templates/book/delete_book.html
+++ b/book/templates/book/delete_book.html
@@ -4,12 +4,23 @@
 {% block content %}
 <h2>Are you sure you want to delete "{{ book.title }}" ?</h2>
 
-  <form id="bookForm" method="POST">
-    {% csrf_token %}
-    <button id="postbutton" type="submit">Confirm Delete</button>
-  </form>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 mt-3 offset-md-2">
+      <form id="bookForm" method="POST">
+        {% csrf_token %}
+        <p>Confirm: </p>
+        <button id="postbutton" type="submit" class="btn btn-outline-primary">Confirm Delete</button>
+      </form>
 
-  <a href="{% url 'home' %}">No, take me home</a>
+      <div class="mt-3">
+        <p>Or :</p>
+        <a href="{% url 'home' %}">No, take me home</a>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 
 <!-- book_detail.html content ends here -->
