--- a/book/templates/book/edit_book.html
+++ b/book/templates/book/edit_book.html
@@ -3,12 +3,17 @@
 <!-- book_detail.html content starts here -->
 {% block content %}
 
-  <form id="bookForm" method="POST">
-    {{ form.as_p }}
-    {% csrf_token %}
-    <button id="postbutton" type="submit">Update</button>
-  </form>
-
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 mt-3 offset-md-2">
+      <form id="bookForm" method="POST">
+        {{ form.as_p }}
+        {% csrf_token %}
+        <button id="postbutton" type="submit" class="btn btn-outline-primary">Update</button>
+      </form>
+    </div>
+  </div>
+</div>
 
 
 <!-- book_detail.html content ends here -->
