--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
     <!-- Goole Fonts CSS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@600&display=swap" rel="stylesheet">
 
     <!-- Font Awesome CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -125,25 +125,25 @@
         <div class="container p-4">
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase" style="background-color: #3BA99C;">Social Media Links:</h5>
+                    <h5 class="text-uppercase" style="background-color: #69D1C5;">Social Media Links:</h5>
                     <ul class="list-unstyled mb-0 p-3 d-flex">
                         <li>
-                            <a href="https://www.facebook.com" target="_blank">
+                            <a href="https://www.facebook.com" target="_blank" style="height:2rem; margin:2rem;">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.twitter.com" target="_blank">
+                            <a href="https://www.twitter.com" target="_blank" style="height:2rem; margin:2rem;">
                                 <i class="fab fa-twitter"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.github.com" target="_blank">
+                            <a href="https://www.github.com" target="_blank" style="height:2rem; margin:2rem;">
                                 <i class="fab fa-github"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.linkedin.com" target="_blank">
+                            <a href="https://www.linkedin.com" target="_blank" style="height:2rem; margin:2rem;">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
                         </li>
