--- a/book/templates/book/about.html
+++ b/book/templates/book/about.html
@@ -28,6 +28,15 @@
                     I'm excited to hear from you. Add a new book or add your review on books and 
                     we can get the ball rolling.</p>
             </div>
+
+            <div class="col-12 col-md-6 my-5">
+                <h3>Home page:</h3>
+                <p>List of books, you can search by book title or author or category.</p>
+                <h3>About page:</h3>
+                <p>Brief instruction of the web site.</p>
+                <h3>Add a book  or add a review to a book:</h3>
+                <p>You will need to signup/log in to access these two features.</p>
+            </div>
         </div>
     </div>
 </div>
