--- a/templates/base.html
+++ b/templates/base.html
@@ -44,15 +44,15 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-1 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+                        <a class="nav-link {% if request.path == home %}active{% endif%}" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'about' %}">About</a>
+                        <a class="nav-link {% if request.path == about %}active{% endif%}" aria-current="page" href="{% url 'about' %}">About</a>
                     </li>
 
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'create_book' %}">Add A Book</a>
+                        <a class="nav-link {% if request.path == create_book %}active{% endif%}" aria-current="page" href="{% url 'create_book' %}">Add A Book</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == logout_url %}active{% endif%}" aria-current="page"
