--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,13 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+    <!-- Summernote CSS and JS -->
+    <link href="{% static 'django_summernote/summernote.css' %}" rel="stylesheet">
+    <link href="{% static 'django_summernote/django_summernote.css' %}" rel="stylesheet">
+    <script src="{% static 'django_summernote/jquery.js' %}"></script>
+    <script src="{% static 'django_summernote/summernote.js' %}"></script>
+    <script src="{% static 'django_summernote/django_summernote.js' %}"></script>
 </head>
 
 <body>
@@ -44,15 +51,18 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-1 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == home %}active{% endif%}" aria-current="page" href="{% url 'home' %}">Home</a>
+                        <a class="nav-link {% if request.path == home %}active{% endif%}" aria-current="page"
+                            href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == about %}active{% endif%}" aria-current="page" href="{% url 'about' %}">About</a>
+                        <a class="nav-link {% if request.path == about %}active{% endif%}" aria-current="page"
+                            href="{% url 'about' %}">About</a>
                     </li>
 
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == create_book %}active{% endif%}" aria-current="page" href="{% url 'create_book' %}">Add A Book</a>
+                        <a class="nav-link {% if request.path == create_book %}active{% endif%}" aria-current="page"
+                            href="{% url 'create_book' %}">Add A Book</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == logout_url %}active{% endif%}" aria-current="page"
@@ -72,7 +82,8 @@
                 </ul>
                 <!-- Form for search bar -->
                 <form method="get" action="{% url 'search' %}">
-                    <input type="text" name="query" placeholder="Title or author or category" value="{{ query }}" width="600px">
+                    <input type="text" name="query" placeholder="Title or author or category" value="{{ query }}"
+                        width="600px">
                     <button type="submit" class="btn btn-outline-primary">Search</button>
                 </form>
             </div>
@@ -159,6 +170,18 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
+    </script>
+
+    <script>
+        $(document).ready(function() {
+            $('#id_description_iframe').summernote({
+                height: 300, // set editor height
+                minHeight: null, // set minimum height of editor
+                maxHeight: null, // set maximum height of editor
+                focus: true, //set focus to editable area after initializing summernote
+                width: 100%
+            });
+        });
     </script>
 
     {% block extras %}
