Align book_edit form width with summernotefield default width

--- a/templates/base.html
+++ b/templates/base.html
@@ -174,12 +174,11 @@
 
     <script>
         $(document).ready(function() {
-            $('#id_description_iframe').summernote({
+            $('#id_description').summernote({
                 height: 300, // set editor height
                 minHeight: null, // set minimum height of editor
                 maxHeight: null, // set maximum height of editor
                 focus: true, //set focus to editable area after initializing summernote
-                width: 100%
             });
         });
     </script>
