--- a/book/templates/book/edit_book.html
+++ b/book/templates/book/edit_book.html
@@ -5,7 +5,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
-      <form id="bookForm" method="POST">
+      <form id="bookForm" method="POST" style="width: 725px">
         {% csrf_token %}
         {{ form|crispy }}
         <button id="postbutton" type="submit" class="btn btn-outline-primary">Update</button>
