Show book image current cloudinary link in edit page

--- a/book/templates/book/edit_book.html
+++ b/book/templates/book/edit_book.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
 
 {% block content %}
@@ -13,4 +14,9 @@
     </div>
   </div>
 </div>
+{% endblock %}
+
+<!-- extra blocks -->
+{% block extras %}
+<script src="{% static 'js/edit.js' %}"></script>
 {% endblock %}
