--- a/book/templates/book/create_book.html
+++ b/book/templates/book/create_book.html
@@ -7,7 +7,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
-      <form id="bookForm" method="POST" enctype='multipart/form-data'>
+      <form id="bookForm" method="POST" style="width: 725px" enctype='multipart/form-data'>
         {{ form |crispy}}
         {% csrf_token %}
         <button id="postbutton" type="submit" class="btn btn-outline-primary">Create</button>
