Change images to webp format and amend related links to webp

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
 
 <body>
 
-    <img src="{% static 'images/default.jpg' %}" alt="Hero Image" id="heroimage" height="300" width="100%">
+    <img src="{% static 'images/default.webp' %}" alt="Hero Image" id="heroimage" height="300" width="100%">
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
