--- a/book/templates/book/about.html
+++ b/book/templates/book/about.html
@@ -5,7 +5,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-6 text-center">
-            <img src="{% static 'images/about.jpg' %}" width=100%  height= 300 alt="about image">
+            <img src="{% static 'images/about.webp' %}" width=100%  height= 300 alt="about image">
         </div>
         <div class="col-6">
             <!-- Title goes between these h2 tags -->
