--- a/book/templates/book/index.html
+++ b/book/templates/book/index.html
@@ -17,7 +17,7 @@
                     <div class="card-body">
                         <div class="image-container">
                             {% if "imageplaceholder" in book.image.url %}
-                            <img class="card-img-top" src="{% static 'images/heroimage.jpg' %}" alt="placeholder image">
+                            <img class="card-img-top" src="{% static 'images/heroimage.webp' %}" alt="placeholder image">
                             {% else %}
                             <img class="card-img-top" src=" {{ book.image.url }}" alt="{{ book.title }}">
                             {% endif %}
@@ -60,7 +60,7 @@
                         <div class="card-body">
                             <div class="image-container">
                                 {% if "imageplaceholder" in book.image.url %}
-                                <img class="card-img-top" src="{% static 'images/heroimage.jpg' %}"
+                                <img class="card-img-top" src="{% static 'images/heroimage.webp' %}"
                                     alt="placeholder image">
                                 {% else %}
                                 <img class="card-img-top" src=" {{ book.image.url }}" alt="{{ book.title }}">
