Edit about.html page

--- a/book/templates/book/about.html
+++ b/book/templates/book/about.html
@@ -11,7 +11,7 @@
             <!-- Title goes between these h2 tags -->
             <h2>About book_shelf</h2>
             <!-- Content goes directly underneath this -->
-            This online communicity commits to provide a freindly environment for people who sharing their thoughts on the books.
+            This online communicity commits to provide a freindly environment for people who recommend books and sharing their thoughts on the books.Basedd on the user's reading history, preferences, and interests, they can connect with like-minded readers.
         </div>
     </div>
     <div class="row">
@@ -21,21 +21,23 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 my-5">
-                <h2>Let's start sharing thoughts about books</h2>
-                <p>I believe in the power of shared knowledge and collective effort.
-                    Whether you have a project in mind, wish to co-author
-                    an article, or simply want to brainstorm some ideas,
+                <h2>Let's start add books you recommend and sharing thoughts about books</h2>
+                <p>Whether you have a book in mind to recommend, wish to  discuss the reviews of books, or simply want to brainstorm some ideas on specific books,
                     I'm excited to hear from you. Add a new book or add your review on books and 
                     we can get the ball rolling.</p>
             </div>
 
             <div class="col-12 col-md-6 my-5">
-                <h3>Home page:</h3>
-                <p>List of books, you can search by book title or author or category.</p>
-                <h3>About page:</h3>
+                <h3>Home page and search</h3>
+                <p>Display list of books, you also can search by book title' key words or author' key words or 4 categories(Fiction, Non_fiction, Science_fiction, Children's&Teenage).</p>
+                <h3>About page</h3>
                 <p>Brief instruction of the web site.</p>
-                <h3>Add a book  or add a review to a book:</h3>
-                <p>You will need to signup/log in to access these two features.</p>
+                <h3>Add/edit/delete a review to a book</h3>
+                <p>You will need to signup/log in to access. In view book detail page, you can add/edit/delete reviews on the specific book.</p>
+                <h3>Add/edit/delete a book</h3>
+                <p>You will need to signup/log in to access. To add a book, click the navbar "Add A Book". To edit/delete a book,
+                    click the button below the specific book in book list view page.
+                </p>
             </div>
         </div>
     </div>
