Add further comments in template files in book app and some styling

--- a/book/templates/book/about.html
+++ b/book/templates/book/about.html
@@ -21,13 +21,14 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 my-5">
+                <!-- Brief introduction -->
                 <h2>Let's start add books you recommend and sharing thoughts about books</h2>
                 <p>Whether you have a book in mind to recommend, wish to  discuss the reviews of books, or simply want to brainstorm some ideas on specific books,
                     I'm excited to hear from you. Add a new book or add your review on books and 
                     we can get the ball rolling.</p>
             </div>
-
-            <div class="col-12 col-md-6 my-5">
+            <div id="about_page" class="col-12 col-md-6 my-5" style="color:azure; background-color: #3ba99c; border-radius: 5%;">
+                <!-- Introduction of the main pages -->
                 <h3>Home page and search</h3>
                 <p>Display list of books, you also can search by book title' key words or author' key words or 4 categories(Fiction, Non_fiction, Science_fiction, Children's&Teenage).</p>
                 <h3>About page</h3>
