--- a/book/templates/book/book_detail.html
+++ b/book/templates/book/book_detail.html
@@ -6,6 +6,7 @@
 {% block content %}
 
 <div class="container">
+    <!-- Book title ,category and added_on -->
     <h1>
         Book title is : {{ book.title}}
     </h1>
