--- a/book/templates/book/edit_book.html
+++ b/book/templates/book/edit_book.html
@@ -9,7 +9,9 @@
       <form id="bookForm" method="POST" style="width: 725px" enctype='multipart/form-data'>
         {% csrf_token %}
         {{ form|crispy }}
-        <button id="postbutton" type="submit" class="btn btn-outline-primary">Update</button>
+        <div class="text-center">
+          <button id="postbutton" type="submit" class="btn btn-outline-primary">Update</button>
+        </div>
       </form>
     </div>
   </div>
