--- a/book/templates/book/index.html
+++ b/book/templates/book/index.html
@@ -1,17 +1,18 @@
 {% extends "base.html" %}
 {% load static %}
 
-<!-- index.html content starts here -->
+
 {% block content %}
 
 <!-- index.html content starts here -->
 <div class="container-fluid content">
     <div class="col-12 mt-3 left">
-
+        <!-- Show the search results -->
         {% if results %}
         <div class="row">
             <h2>Results</h2>
             {% for book in results %}
+            <!-- Iterate the searching results -->
             <div class="col-md-4">
                 <div class="card mb-4">
                     <div class="card-body">
@@ -54,6 +55,7 @@
         <!-- Book Entries Column -->
         <div class="col-12 mt-3 left">
             <div class="row">
+                <!-- Display the list of books -->
                 {% for book in book_list %}
                 <div class="col-md-4">
                     <div class="card mb-4">
@@ -93,6 +95,7 @@
     </div>
 
     {% if is_paginated %}
+    <!-- Display page information -->
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
             {% if page_obj.has_previous %}
