--- a/templates/base.html
+++ b/templates/base.html
@@ -25,13 +25,6 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
-    <!-- Summernote CSS and JS -->
-    <!-- <link href="{% static 'django_summernote/summernote.css' %}" rel="stylesheet">
-    <link href="{% static 'django_summernote/django_summernote.css' %}" rel="stylesheet">
-    <script src="{% static 'django_summernote/jquery.js' %}"></script>
-    <script src="{% static 'django_summernote/summernote.js' %}"></script>
-    <script src="{% static 'django_summernote/django_summernote.js' %}"></script> -->
 </head>
 
 <body>
@@ -119,6 +112,7 @@
     </div>
 
     <main class="">
+        <!-- Display the user login status -->
         {% if user.is_authenticated %}
         <p class="text-end m-3">You are logged in as {{user}}</p>
         {% else %}
@@ -136,6 +130,7 @@
         <div class="container p-4">
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+                    <!-- Social media links -->
                     <h5 class="text-uppercase" style="background-color: #69D1C5;">Social Media Links:</h5>
                     <ul class="list-unstyled mb-0 p-3 d-flex">
                         <li>
@@ -171,17 +166,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
     </script>
-
-    <!-- <script>
-        $(document).ready(function() {
-            $('#id_description').summernote({
-                height: 300, // set editor height
-                minHeight: null, // set minimum height of editor
-                maxHeight: null, // set maximum height of editor
-                focus: true, //set focus to editable area after initializing summernote
-            });
-        });
-    </script> -->
 
     {% block extras %}
     {% endblock %}
