Style the logout/in html

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -29,5 +29,13 @@
           </form>
       </div>
   </div>
+  <div class="row">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+  </div>
 </div>
 {% endblock content %}
